# rye-template

./: README.md  pyproject.toml
.github/workflows/: python.yml
src/rye_template/: __init__.py
tests/: test_hello.py
